// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompleteListButtons calls handleMerge when Merge is selected 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="complete-list-refresh"
      type="button"
    >
      <i
        class="fa fa-redo fa-2x text-primary"
      />
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="complete-list-merge"
      type="button"
    >
      <i
        class="fa fa-compress-alt fa-2x text-warning"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="complete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`CompleteListButtons renders refresh disabled when user is not owner 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-disabled btn btn-link"
      data-test-id="complete-list-refresh"
      disabled=""
      type="button"
    >
      <i
        class="fa fa-redo fa-2x text-primary"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="complete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`CompleteListButtons renders refresh enabled when user is owner 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="complete-list-refresh"
      type="button"
    >
      <i
        class="fa fa-redo fa-2x text-primary"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="complete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;
